# pcre-heavy

./: .ghci  .travis.yml  Makefile  README.md  pcre-heavy.cabal  stack.yaml
