name:            pcre-heavy
version:         0.2.1
synopsis:        A regexp library on top of pcre-light you can actually use.
description:
    A regular expressions library that does not suck.

    - based on <https://hackage.haskell.org/package/pcre-light pcre-light>

    - takes and returns <https://hackage.haskell.org/package/stringable Stringables> everywhere

    - a QuasiQuoter for regexps that does compile time checking

    - SEARCHES FOR MULTIPLE MATCHES! DOES REPLACEMENT!
category:        Web
homepage:        https://github.com/myfreeweb/pcre-heavy
author:          Greg V
copyright:       2015 Greg V <greg@unrelenting.technology>
maintainer:      greg@unrelenting.technology
license:         OtherLicense
license-file:    COPYING
build-type:      Simple
cabal-version:   >= 1.18
extra-source-files:
    README.md
tested-with:
    GHC == 7.8.2

source-repository head
    type: git
    location: git://github.com/myfreeweb/pcre-heavy.git

library
    build-depends:
        base >= 4.0.0.0 && < 5
      , pcre-light
      , bytestring
      , stringable
      , template-haskell
    default-language: Haskell2010
    exposed-modules:
        Text.Regex.PCRE.Heavy
    ghc-prof-options: -auto-all -prof
    ghc-options: -Wall
    hs-source-dirs: library

test-suite examples
    build-depends:
        base >= 4.0.0.0 && < 5
      , Glob == 0.*
      , doctest == 0.*
    default-language: Haskell2010
    hs-source-dirs: test-suite
    main-is: DocTest.hs
    type: exitcode-stdio-1.0
