name:            pcre-heavy
version:         1.0.0.2
synopsis:        A regexp library on top of pcre-light you can actually use.
description:
    A regular expressions library that does not suck.

    Based on <https://hackage.haskell.org/package/pcre-light pcre-light>.

    Takes and returns <https://hackage.haskell.org/package/stringable Stringables> everywhere.

    Includes a QuasiQuoter for regexps that does compile time checking.

    SEARCHES FOR MULTIPLE MATCHES! DOES REPLACEMENT!
category:        Web
homepage:        https://github.com/myfreeweb/pcre-heavy
author:          Greg V
copyright:       2015 Greg V <greg@unrelenting.technology>
maintainer:      greg@unrelenting.technology
license:         PublicDomain
license-file:    UNLICENSE
build-type:      Simple
cabal-version:   >= 1.10
extra-source-files:
    README.md
tested-with:
    GHC == 7.10.2

source-repository head
    type: git
    location: git://github.com/myfreeweb/pcre-heavy.git

library
    build-depends:
        base >= 4.3.0.0 && < 5
      , base-compat >= 0.8.0
      , pcre-light
      , bytestring
      , string-conversions
      , semigroups
      , template-haskell
    default-language: Haskell2010
    exposed-modules:
        Text.Regex.PCRE.Heavy
    ghc-options: -Wall
    hs-source-dirs: library

test-suite examples
    build-depends:
        base >= 4.3.0.0 && < 5
      , Glob
      , doctest
    default-language: Haskell2010
    ghc-options: -threaded
    hs-source-dirs: test-suite
    main-is: DocTest.hs
    type: exitcode-stdio-1.0
